# metamethod

./: CMakeLists.txt  arguments.h  function_traits.h  invokers.h  main.cpp  metaclass.h  metatype.cpp  metatype.h
